// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`recoverCommand should recover an exact copy of the command 1`] = `
{
  "aggregate": {
    "name": null,
    "namespace": null,
  },
  "name": "test_recover_command",
  "target": [Function],
  "version": 1,
}
`;

exports[`recoverCommand should recover an exact copy of the command 2`] = `
TestRecoverCommand {
  "one": "test",
  "two": 123,
}
`;

exports[`recoverEvent should recover an exact copy of the event 1`] = `
{
  "name": "test_recover_event",
  "target": [Function],
  "version": 1,
}
`;

exports[`recoverEvent should recover an exact copy of the event 2`] = `
TestRecoverEvent {
  "one": "test",
  "two": 123,
}
`;
